--- a/templates/booking/manage.html.twig
+++ b/templates/booking/manage.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container">
+<div class="container booking-manage">
 	<h1>Gérer mes réservations</h1>
 	{% if bookings is empty %}
 	<p>Aucune réservation en cours.</p>
