--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,9 +33,9 @@
 								{# <li class="nav-item"><a class="nav-link" href="{{ path('event_list') }}">Événements</a></li> #}
 									<li class="nav-item"> <a class="nav-link" href="{{ path('planning') }}">Planning</a>
 								</li>
-								{# <li class="nav-item">
+								<li class="nav-item">
 									<a class="nav-link" href="{{ path('calendar') }}">Réservation</a>
-								</li> #}
+								</li>
 								{# <li class="nav-item"><a class="nav-link" href="/tarifs">Tarifs</a></li> #}
 								<li class="nav-item">
 									<a class="nav-link" href="{{ path('contact') }}">Contact</a>
