--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -539,6 +539,10 @@ footer.footer p {
 	margin-top: 0;
 }
 
+.edit-plan {
+	max-width: 50%;
+}
+
 @media screen and (max-width: 1500px) {
 	.table th,
 	.table td {
@@ -771,7 +775,7 @@ footer.footer p {
 		display: none;
 	} */
 
-	.administration .btn {
+	.administration .btn, .admin-course .btn {
         padding: 3px !important;
         font-size: 8px !important;
     }
