--- a/templates/plan/edit.html.twig
+++ b/templates/plan/edit.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container mt-5">
-		<div class="col-md-12 w-50 mx-auto">
+	<div class="container edit-plan mt-5">
+		<div class="col mx-auto">
 			<div class="card">
 				<div class="card-body">
 					<h1 class="mb-4">Modifier le forfait</h1>
