ajout du paiement ponctuel

--- a/templates/plan/list.html.twig
+++ b/templates/plan/list.html.twig
@@ -15,21 +15,32 @@
 							<div class="list-group-item mb-3">
 								<h5 class="mb-1">{{ plan.name }}</h5>
 								<p class="mb-1">
-									Type de forfait : {{ plan.type }}
+									Type de forfait :
+									{{ plan.type }}
 									<br>
-									Date de début : {{ plan.startDate|date('d/m/Y') }}
+									Date de début :
+									{{ plan.startDate|date('d/m/Y') }}
 									<br>
-									Date de fin : {{ plan.endDate|date('d/m/Y') }}
+									Date de fin :
+									{{ plan.endDate|date('d/m/Y') }}
 									<br>
-									Mode de paiement : {{ paymentModes[plan.maxPayments] }}
+									Récurrent :
+									{{ plan.isRecurring ? 'Oui' : 'Non' }}
 									<br>
-									ID du prix Stripe : {{ plan.stripePriceId }}
+									Mode de paiement :
+									{{ paymentModes[plan.maxPayments] }}
+									<br>
+									ID du prix Stripe :
+									{{ plan.stripePriceId }}
 								</p>
 								<h6 class="mt-3">Cours inclus :</h6>
 								<ul class="list-group mb-3">
 									{% for planCourse in plan.planCourses %}
 										<li class="list-group-item">
-											{{ planCourse.course.name }} - {{ planCourse.credits }} crédits
+											{{ planCourse.course.name }}
+											-
+											{{ planCourse.credits }}
+											crédits
 										</li>
 									{% endfor %}
 								</ul>
