--- a/templates/plan/new.html.twig
+++ b/templates/plan/new.html.twig
@@ -25,6 +25,10 @@
 						{{ form_widget(form.endDate, {'attr': {'class': 'form-control'}}) }}
 					</div>
 					<div class="form-group">
+						{{ form_label(form.isRecurring, 'Est-ce un abonnement récurrent ?') }}
+						{{ form_widget(form.isRecurring, {'attr': {'class': 'form-control'}}) }}
+					</div>
+					<div class="form-group">
 						{{ form_label(form.maxPayments) }}
 						{{ form_widget(form.maxPayments, {'attr': {'class': 'form-control'}}) }}
 					</div>
