--- a/templates/plan/edit.html.twig
+++ b/templates/plan/edit.html.twig
@@ -1,21 +1,25 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container edit-plan mt-5">
-		<div class="col mx-auto">
-			<div class="card">
-				<div class="card-body">
-					<h1 class="mb-4">Modifier le forfait</h1>
+<div class="container edit-plan mt-5">
+	<div class="col mx-auto">
+		<div class="card">
+			<div class="card-body">
+				<h1 class="mb-4">Modifier le forfait</h1>
 
-					{{ form_start(form) }}
-					<div class="form-group">
-						{{ form_label(form.name, 'Nom du forfait') }}
-						{{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
-					</div>
-					<div class="form-group">
-						{{ form_label(form.type, 'Type de Forfait') }}
-						{{ form_widget(form.type, {'attr': {'class': 'form-control'}}) }}
-					</div>
+				{{ form_start(form) }}
+				<div class="form-group">
+					{{ form_label(form.name, 'Nom du forfait') }}
+					{{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+				</div>
+				<div class="form-group">
+					{{ form_label(form.type, 'Type de Forfait') }}
+					{{ form_widget(form.type, {'attr': {'class': 'form-control'}}) }}
+				</div>
+				<div class="form-group">
+					{{ form_label(form.subscriptionType, 'Type d\'abonnement') }}
+                        {{ form_widget(form.subscriptionType, {'attr': {'class': 'form-control'}}) }}
+                    </div>
 					<div class="form-group">
 						{{ form_label(form.startDate, 'Date de début du forfait') }}
 						{{ form_widget(form.startDate, {'attr': {'class': 'form-control'}}) }}
@@ -24,14 +28,17 @@
 						{{ form_label(form.endDate, 'Date de fin du forfait') }}
 						{{ form_widget(form.endDate, {'attr': {'class': 'form-control'}}) }}
 					</div>
-					<div class="form-group">
+					{# <div class="form-group">
 						{{ form_label(form.isRecurring, 'Est-ce un abonnement récurrent ?') }}
 						{{ form_widget(form.isRecurring, {'attr': {'class': 'form-control'}}) }}
-					</div>
-
-					<div class="form-group">
+					</div> #}
+					{# <div class="form-group">
 						{{ form_label(form.maxPayments) }}
 						{{ form_widget(form.maxPayments, {'attr': {'class': 'form-control'}}) }}
+					</div> #}
+					<div class="form-group">
+					{{ form_label(form.stripeProductId, 'ID du produit Stripe') }}
+					{{ form_widget(form.stripeProductId, {'attr': {'class': 'form-control'}}) }}
 					</div>
 					<div class="form-group">
 						{{ form_label(form.stripePriceId, 'ID du prix Stripe') }}
