--- a/templates/plan/new.html.twig
+++ b/templates/plan/new.html.twig
@@ -1,45 +1,49 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container mt-5">
-        <div class="col-md-12 w-50 mx-auto">
-            <div class="card">
-                <div class="card-body">
-                    <h1>Créer un nouveau forfait</h1>
+<div class="container mt-5">
+	<div class="col-md-12 w-50 mx-auto">
+		<div class="card">
+			<div class="card-body">
+				<h1>Créer un nouveau forfait</h1>
 
-                    {{ form_start(form) }}
-                    <div class="form-group">
-                        {{ form_label(form.name) }}
-                        {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.type) }}
-                        {{ form_widget(form.type, {'attr': {'class': 'form-control'}}) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.subscriptionType, 'Type d\'abonnement') }}
-                        {{ form_widget(form.subscriptionType, {'attr': {'class': 'form-control'}}) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.startDate) }}
-                        {{ form_widget(form.startDate, {'attr': {'class': 'form-control'}}) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.endDate) }}
-                        {{ form_widget(form.endDate, {'attr': {'class': 'form-control'}}) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.isRecurring, 'Est-ce un abonnement récurrent ?') }}
-                        {{ form_widget(form.isRecurring, {'attr': {'class': 'form-control'}}) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.maxPayments, 'Nombre maximum de paiements') }}
-                        {{ form_widget(form.maxPayments, {'attr': {'class': 'form-control'}}) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.stripePriceId, 'ID Stripe du prix') }}
-                        {{ form_widget(form.stripePriceId, {'attr': {'class': 'form-control'}}) }}
-                    </div>
+				{{ form_start(form) }}
+				<div class="form-group">
+					{{ form_label(form.name) }}
+					{{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+				</div>
+				<div class="form-group">
+					{{ form_label(form.type) }}
+					{{ form_widget(form.type, {'attr': {'class': 'form-control'}}) }}
+				</div>
+				<div class="form-group">
+					{{ form_label(form.subscriptionType, 'Type d\'abonnement') }}
+                    {{ form_widget(form.subscriptionType, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.startDate) }}
+                    {{ form_widget(form.startDate, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.endDate) }}
+                    {{ form_widget(form.endDate, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                {# <div class="form-group">
+                    {{ form_label(form.isRecurring, 'Est-ce un abonnement récurrent ?') }}
+                    {{ form_widget(form.isRecurring, {'attr': {'class': 'form-control'}}) }}
+                </div> #}
+                {# <div class="form-group">
+                    {{ form_label(form.maxPayments, 'Nombre maximum de paiements') }}
+                    {{ form_widget(form.maxPayments, {'attr': {'class': 'form-control'}}) }}
+                </div> #}
+                <div class="form-group">
+                {{ form_label(form.stripeProductId, 'ID du produit Stripe') }}
+                {{ form_widget(form.stripeProductId, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.stripePriceId, 'ID du prix Stripe') }}
+                    {{ form_widget(form.stripePriceId, {'attr': {'class': 'form-control'}}) }}
+                </div>
 
                     <h2>Cours</h2>
                     <div class="plan-courses-collection" data-prototype="{{ form_widget(form.planCourses.vars.prototype)|e('html_attr') }}">
