--- a/templates/admin/booking_for_client.html.twig
+++ b/templates/admin/booking_for_client.html.twig
@@ -50,7 +50,16 @@
 					</select>
 				</div>
 
+
 				<button type="submit" class="btn btn-primary mt-3">Réserver pour ce client</button>
+				<!-- Bouton pour voir les réservations si un client est sélectionné -->
+				{% if app.request.query.get('userId') %}
+					<div class="mt-3">
+						<a href="{{ path('admin_client_reservations', {'userId': app.request.query.get('userId')}) }}" class="btn btn-info">
+							Voir les réservations de ce client
+						</a>
+					</div>
+				{% endif %}
 			</form>
 		{% else %}
 			<p>Aucun cours disponible pour ce client.</p>
