--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta description="Application pour réserver des cours de Pole dance, Yoga aérien et Souplesse">
+		<meta name="description" content="Application pour réserver des cours de Pole dance, Yoga aérien et Souplesse">
 		<title>
 			{% block title %}Bienvenue !
 			{% endblock %}
@@ -11,6 +11,9 @@
 
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 		<link rel="stylesheet" href="{{ asset('styles/style.css') }}"> {% block stylesheets %}{% endblock %}
 		</head>
 		<body>
@@ -28,19 +31,30 @@
 								<li class="nav-item">
 									<a class="nav-link" href="/">Accueil</a>
 								</li>
-								{# <li class="nav-item"><a class="nav-link" href="{{ path('coach_list') }}">Coach</a></li> #}
-								{# <li class="nav-item"><a class="nav-link" href="{{ path('course_details_list') }}">Activités</a></li> #}
-								{# <li class="nav-item"><a class="nav-link" href="{{ path('event_list') }}">Événements</a></li> #}
-									<li class="nav-item"> <a class="nav-link" href="{{ path('planning') }}">Planning</a>
+								<li class="nav-item">
+									<a class="nav-link" href="{{ path('coach_list') }}">Coach</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="{{ path('course_details_list') }}">Activités</a>
+								</li>
+								{# <li class="nav-item"> #}
+									{# <a class="nav-link" href="{{ path('event_list') }}">Événements</a> #}
+								{# </li> #}
+								<li class="nav-item">
+									<a class="nav-link" href="{{ path('planning') }}">Planning</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="{{ path('calendar') }}">Réservation</a>
 								</li>
-								{# <li class="nav-item"><a class="nav-link" href="/tarifs">Tarifs</a></li> #}
+								<li class="nav-item">
+									<a class="nav-link" href="/tarifs">Tarifs</a>
+								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="{{ path('contact') }}">Contact</a>
 								</li>
-								{# <li class="nav-item"><a class="nav-link" href="{{ path('photo_gallery') }}">Galerie</a></li> #}
+								{# <li class="nav-item"> #}
+									{# <a class="nav-link" href="{{ path('photo_gallery') }}">Galerie</a> #}
+								{# </li> #}
 
 								{% if is_granted('ROLE_ADMIN') %}
 									<li class="nav-item">
@@ -87,8 +101,8 @@
 				<footer class="footer">
 					<nav>
 						<ul>
-							<li><ahref="{{path('reglement_interieur')}}">Règlement Intérieur</a></li>
-							<li><ahref="{{path('nos_cgv')}}">Nos CGV</a></li>
+							<li><a href="{{path('reglement_interieur')}}">Règlement Intérieur</a></li>
+							<li><a href="{{path('nos_cgv')}}">Nos CGV</a></li>
 						</ul>
 					</nav>
 					<p class="text-center">©2024 Tous droits réservés. AirStudio73 - Powered by Samuel MÉLINE</p>
@@ -98,6 +112,8 @@
 			<!-- Bootstrap JS -->
 			<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+			<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 			{% block javascripts %}
 				<script>
 					// Afficher le bouton lorsque l'utilisateur fait défiler vers le bas
