--- a/templates/coach/edit.html.twig
+++ b/templates/coach/edit.html.twig
@@ -9,18 +9,29 @@
 
 		{{ form_start(form) }}
 		<div class="form-group">
+			{{ form_label(form.photo) }}
+			{{ form_widget(form.photo, {'attr': {'class': 'form-control-file'}}) }}
+		</div>
+		<div class="form-group">
 			{{ form_label(form.name) }}
 			{{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
 		</div>
 		<div class="form-group">
-			{{ form_label(form.biography) }}
-			{{ form_widget(form.biography, {'attr': {'class': 'form-control'}}) }}
+			{{ form_label(form.presentation) }}
+			{{ form_widget(form.presentation, {'attr': {'class': 'form-control'}}) }}
 		</div>
 		<div class="form-group">
-			{{ form_label(form.photo) }}
-			{{ form_widget(form.photo, {'attr': {'class': 'form-control-file'}}) }}
+			{{ form_label(form.description) }}
+			{{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
 		</div>
-
+		<div class="form-group">
+			{{ form_label(form.second_description) }}
+			{{ form_widget(form.second_description, {'attr': {'class': 'form-control'}}) }}
+		</div>
+		<div class="form-group">
+			{{ form_label(form.third_description) }}
+			{{ form_widget(form.third_description, {'attr': {'class': 'form-control'}}) }}
+		</div>
 		<button type="submit" class="btn btn-primary">Enregistrer</button>
 		{{ form_end(form) }}
 
