--- a/templates/course_details/new.html.twig
+++ b/templates/course_details/new.html.twig
@@ -14,12 +14,12 @@
 			{{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
 		</div>
 		<div class="form-group">
-			{{ form_label(form.photo) }}
-			{{ form_widget(form.photo, {'attr': {'class': 'form-control-file'}}) }}
+			{{ form_label(form.benefits, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.benefits, {'attr': {'class': 'form-control'}}) }}
 		</div>
 		<div class="form-group">
-			{{ form_label(form.defaultCapacity, null, {'label_attr': {'class': 'form-label'}}) }}
-			{{ form_widget(form.defaultCapacity, {'attr': {'class': 'form-control'}}) }}
+			{{ form_label(form.photo) }}
+			{{ form_widget(form.photo, {'attr': {'class': 'form-control-file'}}) }}
 		</div>
 		<button type="submit" class="btn btn-primary">Enregistrer</button>
 		{{ form_end(form) }}
