--- a/templates/photo/gallery.html.twig
+++ b/templates/photo/gallery.html.twig
@@ -1,31 +1,31 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container">
+	<div class="container gallery">
 		<h1>Galerie Photos</h1>
 
 		{% if photos|length > 0 %}
-			<div id="photoCarousel" class="carousel mx-auto w-75" style="max-width: 1200px;">
-				<div class="carousel-inner">
-					{% for photo in photos %}
-						<div class="carousel-item {% if loop.first %}active{% endif %}">
-							<img src="{{ asset('uploads/images/' ~ photo.imagePath) }}" class="d-block w-100" alt="{{ photo.title }}">
-							<div class="carousel-caption d-none d-md-block"></div>
+			<div class="row">
+				{% for photo in photos %}
+					<div class="col-md-3 mb-4">
+						<div>
+							<div>
+								{% if is_granted('ROLE_ADMIN') %}
+									<a href="{{ path('photo_edit', {id: photo.id}) }}" class="btn update btn-sm mb-2">Modifier</a>
+									<a href="{{ path('photo_delete', {id: photo.id}) }}" class="btn complet btn-sm mb-2" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette photo ?');">Supprimer</a>
+								{% endif %}
+							</div>
+							<a href="{{ asset('uploads/images/' ~ photo.imagePath) }}" data-lightbox="gallery" data-title="{{ photo.title }}">
+								<img src="{{ asset('uploads/images/' ~ photo.imagePath) }}" class="card-img-top" alt="{{ photo.title }}">
+							</a>
 						</div>
-					{% endfor %}
-				</div>
-				<a class="carousel-control-prev" href="#photoCarousel" role="button" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#photoCarousel" role="button" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</a>
+					</div>
+				{% endfor %}
 			</div>
 		{% else %}
 			<p>Aucune photo dans la galerie.</p>
 		{% endif %}
+
 		{% if is_granted('ROLE_ADMIN') %}
 			<a class="btn btn-info mt-3" href="{{ path('photo_add') }}">Ajouter des photos</a>
 		{% endif %}
